[gd_scene load_steps=6 format=3 uid="uid://c27emw8af2krs"]

[ext_resource type="Script" path="res://scenes/battle/DamageCounter.gd" id="1_78dev"]
[ext_resource type="FontFile" uid="uid://8u1lpqmsg5ti" path="res://assets/fonts/marietta-seven.ttf" id="1_xpd3p"]

[sub_resource type="Animation" id="Animation_42rhx"]
resource_name = "number_appear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number3D/First_Digit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Number3D/First_Digit:outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Number3D/First_Digit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, -0.1, 0, 0.2, 1, 0, 0, 0, 1.8, 1, 0, 0, 0, 2.1, 1, 0, 0.1, 0)
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Number3D/Second_Digit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.4, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Number3D/Second_Digit:outline_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.4, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Number3D/Second_Digit")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0.2, 1, 0, -0.1, 0, 0.4, 1, 0, 0, 0, 2, 1, 0, 0, 0, 2.3, 1, 0, 0.1, 0)
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Number3D/Third_Digit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Number3D/Third_Digit:outline_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.4, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/8/type = "position_3d"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Number3D/Third_Digit")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0.4, 1, 0, -0.1, 0, 0.6, 1, 0, 0, 0, 2.2, 1, 0, 0, 0, 2.5, 1, 0, 0.1, 0)
tracks/9/type = "position_3d"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Number3D")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, 0, -0.1, 0, 2.5, 1, 0, 0.1, 0)

[sub_resource type="Animation" id="Animation_2yvog"]
resource_name = "critic_appear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number3D/First_Digit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0.901961, 0, 1), Color(1, 0.901961, 0, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Number3D/First_Digit:outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Number3D/First_Digit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, -0.1, 0, 0.2, 1, 0, 0, 0, 1.8, 1, 0, 0, 0, 2.1, 1, 0, 0.1, 0)
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Number3D/Second_Digit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.4, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0.901961, 0, 1), Color(1, 0.901961, 0, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Number3D/Second_Digit:outline_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.4, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Number3D/Second_Digit")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0.2, 1, 0, -0.1, 0, 0.4, 1, 0, 0, 0, 2, 1, 0, 0, 0, 2.3, 1, 0, 0.1, 0)
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Number3D/Third_Digit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0.901961, 0, 1), Color(1, 0.901961, 0, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Number3D/Third_Digit:outline_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.4, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/8/type = "position_3d"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Number3D/Third_Digit")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0.4, 1, 0, -0.1, 0, 0.6, 1, 0, 0, 0, 2.2, 1, 0, 0, 0, 2.5, 1, 0, 0.1, 0)
tracks/9/type = "position_3d"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Number3D")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, 0, -0.1, 0, 2.5, 1, 0, 0.1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ws802"]
_data = {
"critic_appear": SubResource("Animation_2yvog"),
"number_appear": SubResource("Animation_42rhx")
}

[node name="DamageCounter" type="Node3D"]
script = ExtResource("1_78dev")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ws802")
}

[node name="Number3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="First_Digit" type="Label3D" parent="Number3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
outline_modulate = Color(0, 0, 0, 0)
text = "1"
font = ExtResource("1_xpd3p")

[node name="Second_Digit" type="Label3D" parent="Number3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
offset = Vector2(45, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
outline_modulate = Color(0, 0, 0, 0)
text = "2"
font = ExtResource("1_xpd3p")

[node name="Third_Digit" type="Label3D" parent="Number3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
offset = Vector2(90, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
outline_modulate = Color(0, 0, 0, 0)
text = "3"
font = ExtResource("1_xpd3p")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
